--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simplex Iteration Visualizer V 0.0</title>
+    <title>Simplex Iteration Visualizer</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; padding: 20px; max-width: 900px; margin: auto; background-color: #f9f9f9; }
         h1, h2, h3 { color: #333; }
@@ -28,7 +28,13 @@
 </head>
 <body>
 
-    <h1>Simplex Method Tool</h1>
+    <h1>Simplex Iteration Visualizer V 0.0</h1>
+
+    <div style="text-align: center; margin: 20px 0;">
+        <img src="https://i.ibb.co/C3KMKT9N/photo-2023-07-08-02-41-40-2.jpg" 
+             alt="Simplex Logo" 
+             style="max-width: 100%; max-height: 300px; height: auto; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+    </div>
 
     <div class="config-section">
         <h3>Configuration</h3>
