--- a/index.html
+++ b/index.html
@@ -347,6 +347,32 @@
 
             outputDiv.innerHTML += finalResHTML;
         }
+function updateCounter() {
+    const namespace = 'simplex-visualizer-unique-id'; 
+    const key = 'site-visits';
+    
+    // Check if the user has visited in this specific session
+    const hasVisitedSession = sessionStorage.getItem('hasVisitedSession');
+
+    const url = hasVisitedSession 
+        ? `https://api.counterapi.dev/v1/${namespace}/${key}/` 
+        : `https://api.counterapi.dev/v1/${namespace}/${key}/up`;
+
+    fetch(url)
+        .then(response => response.json())
+        .then(data => {
+            document.getElementById('visit-count').innerText = data.count;
+            if (!hasVisitedSession) {
+                // Mark this session as visited
+                sessionStorage.setItem('hasVisitedSession', 'true');
+            }
+        });
+}
+
+updateCounter();
     </script>
+<div style="position: fixed; bottom: 10px; left: 10px; background: rgba(255, 255, 255, 0.9); padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; font-family: sans-serif; font-size: 14px; z-index: 1000;">
+    visits: <span id="visit-count">...</span>
+</div>
 </body>
 </html>
