--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         }
 
         function solveSimplex() {
+            trackSolveClick();
             const outputDiv = document.getElementById('output-area');
             outputDiv.innerHTML = '';
 
@@ -347,32 +348,52 @@
 
             outputDiv.innerHTML += finalResHTML;
         }
-function updateCounter() {
-    const namespace = 'simplex-visualizer-unique-id'; 
-    const key = 'site-visits';
-    
-    // Check if the user has visited in this specific session
+const NAMESPACE = 'simplex-visualizer-unique-id';
+const KEY_VISITS = 'site-visits';
+const KEY_SOLVED = 'problems-solved';
+
+// 1. Initialize Stats on Page Load
+function initStats() {
+    // --- Handle Visits (Session Logic) ---
     const hasVisitedSession = sessionStorage.getItem('hasVisitedSession');
+    const visitUrl = hasVisitedSession 
+        ? `https://api.counterapi.dev/v1/${NAMESPACE}/${KEY_VISITS}/` 
+        : `https://api.counterapi.dev/v1/${NAMESPACE}/${KEY_VISITS}/up`;
 
-    const url = hasVisitedSession 
-        ? `https://api.counterapi.dev/v1/${namespace}/${key}/` 
-        : `https://api.counterapi.dev/v1/${namespace}/${key}/up`;
-
-    fetch(url)
-        .then(response => response.json())
+    fetch(visitUrl)
+        .then(res => res.json())
         .then(data => {
             document.getElementById('visit-count').innerText = data.count;
-            if (!hasVisitedSession) {
-                // Mark this session as visited
-                sessionStorage.setItem('hasVisitedSession', 'true');
-            }
-        });
+            if (!hasVisitedSession) sessionStorage.setItem('hasVisitedSession', 'true');
+        })
+        .catch(() => document.getElementById('visit-count').innerText = "-");
+
+    // --- Handle Solved (Read Only initially) ---
+    // We only read the current count here, we don't add to it yet.
+    fetch(`https://api.counterapi.dev/v1/${NAMESPACE}/${KEY_SOLVED}/`)
+        .then(res => res.json())
+        .then(data => {
+            document.getElementById('solve-count').innerText = data.count;
+        })
+        .catch(() => document.getElementById('solve-count').innerText = "-");
 }
 
-updateCounter();
+// 2. Function to increment 'Solved' count
+function trackSolveClick() {
+    fetch(`https://api.counterapi.dev/v1/${NAMESPACE}/${KEY_SOLVED}/up`)
+        .then(res => res.json())
+        .then(data => {
+            document.getElementById('solve-count').innerText = data.count;
+        })
+        .catch(err => console.log('Tracking blocked'));
+}
+
+// Run initialization
+initStats();
     </script>
-<div style="position: fixed; bottom: 10px; left: 10px; background: rgba(255, 255, 255, 0.9); padding: 5px 10px; border: 1px solid #ccc; border-radius: 5px; font-family: sans-serif; font-size: 14px; z-index: 1000;">
-    visits: <span id="visit-count">...</span>
+<div style="position: fixed; bottom: 10px; left: 10px; background: rgba(255, 255, 255, 0.95); padding: 8px 12px; border: 1px solid #ccc; border-radius: 5px; font-family: sans-serif; font-size: 13px; z-index: 1000; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+    <div style="margin-bottom: 4px;">Visits: <span id="visit-count">...</span></div>
+    <div>Solved: <span id="solve-count">...</span></div>
 </div>
 </body>
 </html>
