Fix HTML output formatting for standard form

--- a/index.html
+++ b/index.html
@@ -455,21 +455,21 @@
 
             let standardFormHTML = `<div class="standard-form-box"><h3>Standard Form</h3>`;
             standardFormHTML += `<p>maximize Z = `;
-            for(let i=0; i<orNumVars; i++) standardFormHTML += `$${cj_array[i]}x_${i+1} + `;
-            for(let i=0; i<orNumConstraints; i++) standardFormHTML += `$0s_${i+1} ${i < orNumConstraints-1 ? '+ ' : ''}`;
+            for(let i=0; i<orNumVars; i++) standardFormHTML += `$${cj_array[i]}x${i+1} + `;
+            for(let i=0; i<orNumConstraints; i++) standardFormHTML += `$0s${i+1} ${i < orNumConstraints-1 ? '+ ' : ''}`;
             standardFormHTML += `</p><p>subject to</p>`;
             
             for(let i=0; i<orNumConstraints; i++) {
                 standardFormHTML += `<p>`;
-                for(let j=0; j<orNumVars; j++) standardFormHTML += `${rows[i][j]}x_${j+1} + `;
+                for(let j=0; j<orNumVars; j++) standardFormHTML += `${rows[i][j]}x${j+1} + `;
                 for(let s=0; s<orNumConstraints; s++) {
-                    if(rows[i][orNumVars+s].val() !== 0) standardFormHTML += `s_${s+1}`;
+                    if(rows[i][orNumVars+s].val() !== 0) standardFormHTML += `s${s+1}`;
                 }
                 standardFormHTML += ` = ${rhs[i]}</p>`;
             }
             standardFormHTML += `<p>`;
-            for(let i=0; i<orNumVars; i++) standardFormHTML += `x_${i+1}, `;
-            for(let i=0; i<orNumConstraints; i++) standardFormHTML += `s_${i+1}${i < orNumConstraints-1 ? ', ' : ''}`;
+            for(let i=0; i<orNumVars; i++) standardFormHTML += `x${i+1}, `;
+            for(let i=0; i<orNumConstraints; i++) standardFormHTML += `s${i+1}${i < orNumConstraints-1 ? ', ' : ''}`;
             standardFormHTML += ` ≥ 0</p></div>`;
             output.innerHTML += standardFormHTML;
 
@@ -539,7 +539,7 @@
                 html += `<table class="or-table">
                     <thead>
                         <tr class="top-cj-row">
-                            <th colspan="3" style="text-align:right;">Cj</th>`;
+                            <th colspan="3"></th>`;
                         for(let c=0; c<totalCols; c++) html += `<th>${cj_array[c]}</th>`;
                 html += `<th></th></tr>
                         <tr class="header-row">
