--- a/index.html
+++ b/index.html
@@ -455,13 +455,25 @@
 
             let standardFormHTML = `<div class="standard-form-box"><h3>Standard Form</h3>`;
             standardFormHTML += `<p>maximize Z = `;
-            for(let i=0; i<orNumVars; i++) standardFormHTML += `$${cj_array[i]}x${i+1} + `;
+            for(let i=0; i<orNumVars; i++) {
+                let val = cj_array[i];
+                let str = val.toString();
+                if(str === '1') str = '';
+                else if(str === '-1') str = '-';
+                standardFormHTML += `${str}x${i+1} + `;
+            }
             for(let i=0; i<orNumConstraints; i++) standardFormHTML += `$0s${i+1} ${i < orNumConstraints-1 ? '+ ' : ''}`;
             standardFormHTML += `</p><p>subject to</p>`;
             
             for(let i=0; i<orNumConstraints; i++) {
                 standardFormHTML += `<p>`;
-                for(let j=0; j<orNumVars; j++) standardFormHTML += `${rows[i][j]}x${j+1} + `;
+                for(let j=0; j<orNumVars; j++) {
+                    let val = rows[i][j];
+                    let str = val.toString();
+                    if(str === '1') str = '';
+                    else if(str === '-1') str = '-';
+                    standardFormHTML += `${str}x${j+1} + `;
+                }
                 for(let s=0; s<orNumConstraints; s++) {
                     if(rows[i][orNumVars+s].val() !== 0) standardFormHTML += `s${s+1}`;
                 }
@@ -543,7 +555,7 @@
                         for(let c=0; c<totalCols; c++) html += `<th>${cj_array[c]}</th>`;
                 html += `<th></th></tr>
                         <tr class="header-row">
-                            <th>Cj</th>
+                            <th></th>
                             <th>Basic Variables</th>
                             <th>Quantity</th>`;
                 for(let i=0; i<orNumVars; i++) html += `<th>x${i+1}</th>`;
