--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                 else if(str === '-1') str = '-';
                 standardFormHTML += `${str}x${i+1} + `;
             }
-            for(let i=0; i<orNumConstraints; i++) standardFormHTML += `$0s${i+1} ${i < orNumConstraints-1 ? '+ ' : ''}`;
+            for(let i=0; i<orNumConstraints; i++) standardFormHTML += `0s${i+1} ${i < orNumConstraints-1 ? '+ ' : ''}`;
             standardFormHTML += `</p><p>subject to</p>`;
             
             for(let i=0; i<orNumConstraints; i++) {
