--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The شنطة العدة of Operations Research</title>
+    <title>OR-ToolKit</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; padding: 20px; max-width: 1100px; margin: auto; background-color: #f9f9f9; color: #333; }
         h1, h2, h3 { color: #333; text-align: center; }
