--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <!-- ========================================== -->
 
 
-    <div id="code-generator" class="tool-content" style="display:none;">
+    <div id="code-generator" class="tool-content" >
     <h3>GAMS/LINGO Generator (Product Mix)</h3>
     <p>Generate syntax for Linear Programming models automatically.</p>
 
