Make code generator div visible by default

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <!-- ========================================== -->
 
 
-    <div id="code-generator" class="tool-content" style="display:none;">
+    <div id="code-generator" class="tool-content" >
     <h3>GAMS/LINGO Generator</h3>
     <p>Generate syntax for Operations Research models automatically.</p>
 
