Add Transportation Problem option to select

--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
         <select id="cg_problem_type" onchange="cg_toggleConfig()" style="width: 100%; padding: 5px;">
             <option value="none">-- Choose a Problem --</option>
             <option value="product_mix">Product Mix (General LP)</option>
+             <option value="transportation">Transportation Problem</option>
             <!-- Future problems (Transportation, Assignment) will go here -->
         </select>
     </div>
